# RootCause

./: .env.example  .gitignore  AI_CONTEXT.md  Dockerfile  LICENSE  PHASES.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/eval/: rca_eval.jsonl  rca_eval_graph_test.jsonl  rca_eval_results.json  rca_eval_results_spotcheck.json  rca_eval_v2.jsonl  retrieval_eval.jsonl
data/postmortems/: PM-001-allegro.md  PM-002-amazon.md  PM-003-circleci.md  PM-004-circleci.md  PM-005-cloudflare.md  PM-006-cloudflare.md  PM-007-cloudflare.md  PM-008-cloudflare.md  PM-009-cloudflare.md  PM-010-cloudflare.md  PM-011-cloudflare.md  PM-012-datadog.md  PM-013-enom.md  PM-014-etsy.md  PM-015-facebook.md  PM-016-facebook.md  PM-017-firefox.md  PM-018-github.md  PM-019-github.md  PM-020-github.md  PM-021-gocardless.md  PM-022-google.md  PM-023-google.md  PM-024-google.md  PM-025-google.md  PM-026-google.md  PM-027-google.md  PM-028-google.md  PM-029-google.md  PM-030-google.md  PM-031-google.md  PM-032-google.md  PM-033-heroku.md  PM-034-heroku.md  PM-035-keepthescore.md  PM-036-microsoft.md  PM-037-npm.md  PM-038-owasa.md  PM-039-pagerduty.md  PM-040-razorpay.md  (+187 more)
data/runbooks/: RB-001-postgres-high-connection-count.md  RB-002-postgres-slow-queries.md  RB-003-redis-memory-exhaustion.md  RB-004-redis-keyspace-eviction-spike.md  RB-005-neo4j-heap-exhaustion.md  RB-006-api-5xx-error-spike.md  RB-007-api-latency-degradation.md  RB-008-python-memory-leak.md  RB-009-grpc-deadline-exceeded.md  RB-010-webhook-delivery-failures.md  RB-011-pod-oomkilled.md  RB-012-node-disk-pressure.md  RB-013-cpu-throttling.md  RB-014-load-balancer-health-check-failures.md  RB-015-autoscaling-not-triggering.md  RB-016-dns-resolution-failures.md  RB-017-ssl-certificate-expiry.md  (+8 more)
docs/: PHASE2-COMPLETE.md  evaluation.md  rca-eval-progress.md  rca-eval-redesign-plan.md
scripts/: build_eval.py  build_rca_eval.py  fetch_postmortems.py  judge.py  judge_prompt.md  run_eval.py  run_rca_eval.py  seed_graph.py
(+48 files in other folders)
