[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootcause"
version = "0.1.0"
description = "Autonomous Incident RCA and Response Copilot"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    # Pydantic
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # LLM / Agents
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    # RAG
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "cohere>=5.11.0",
    "tiktoken>=0.8.0",
    # Databases
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",
    "neo4j>=5.26.0",
    # Observability
    "langfuse>=2.60.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rootcause"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["rootcause"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
